Add accesibility font switcher

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,7 @@
 @plugin '@tailwindcss/typography';
 
 @import './lib/styles/theme.css';
+@import './lib/styles/font-themes.css';
 
 /* Base styles */
 body {
